[workspace]
members = [
    "xtask",
    "ch1",
    "ch1-lab",
    "ch2",
    "ch3",
    "ch4",
    "ch5",
    "ch6",
    "user",
    "console",
    "syscall",
    "kernel-context",
    "kernel-vm",
    "utils",
    "easy-fs",
]
default-members = ["xtask"]

[profile.release]
opt-level = "s"
debug = true
