[workspace]
members = [
    "xtask",
    "ch1",
    "ch1-lab",
    "ch2",
    "ch3",
    "ch4",
    "ch5",
    "ch6",
    "ch7",
    "user",
    "linker",
    "console",
    "syscall",
    "kernel-context",
    "kernel-alloc",
    "kernel-vm",
    "easy-fs",
    "signal-defs",
    "signal",
    "signal-impl",
]
default-members = ["xtask"]
