[package]
name = "ch2"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt", branch = "dev" }
riscv = "0.8.0"

app-meta = { path = "../app-meta" }
linker = { path = "../linker" }
console = { path = "../console" }
kernel-context = { path = "../kernel-context" }
syscall = { path = "../syscall", features = ["kernel"] }

[build-dependencies]
linker = { path = "../linker" }
