[package]
name = "ch4"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt", branch = "dev" }
xmas-elf = "0.8.0"
riscv = "0.8.0"

console = { path = "../console" }
utils = { path = "../utils" }
kernel-context = { path = "../kernel-context" }
kernel-vm = { path = "../kernel-vm" }
customizable-buddy = "0.0.1"
syscall = { path = "../syscall", features = ["kernel"] }
