[package]
name = "ch5"
version = "0.0.1"
edition = "2021"
authors = ["zflcs <1491657576@qq.com>"]

[dependencies]
sbi-rt = "0.0.1"
customizable-buddy = "0.0.2"
xmas-elf = "0.8.0"
riscv = "0.8.0"
spin = "0.9.4"

linker = { path = "../linker" }
console = { path = "../console" }
kernel-context = { path = "../kernel-context" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
task-manage = { path = "../task-manage" }

[build-dependencies]
linker = { path = "../linker" }
