[package]
name = "ch6"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>", "tkf2019 <kaifu6821@qq.com>"]

[dependencies]
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt", branch = "dev" }
customizable-buddy = "0.0.2"
xmas-elf = "0.8.0"
riscv = "0.8.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
spin = "0.7.0"

console = { path = "../console" }
utils = { path = "../utils" }
kernel-context = { path = "../kernel-context" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
task-manage = { path = "../task-manage" }

easy-fs = { path = "../easy-fs" }
