[package]
name = "ch6"
version = "0.0.1"
edition = "2021"
authors = ["tkf2019 <kaifu6821@qq.com>"]

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt", branch = "dev" }
customizable-buddy = "0.0.2"
xmas-elf = "0.8.0"
riscv = "0.8.0"
spin = "0.9.4"

app-meta = { path = "../app-meta" }
linker = { path = "../linker" }
console = { path = "../console" }
kernel-context = { path = "../kernel-context" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
task-manage = { path = "../task-manage" }
easy-fs = { path = "../easy-fs" }

[build-dependencies]
linker = { path = "../linker" }
