[package]
name = "ch7"
version = "0.0.1"
edition = "2021"
authors = ["scPointer <jax01@foxmail.com>"]

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
xmas-elf = "0.8.0"
riscv = "0.9"
spin = "0.9.4"

linker = { path = "../linker" }
console = { path = "../console" }
kernel-context = { path = "../kernel-context" }
kernel-alloc = { path = "../kernel-alloc" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
task-manage = { path = "../task-manage" }
easy-fs = { path = "../easy-fs" }
signal = { path = "../signal" }
signal-impl = { path = "../signal-impl" }

[build-dependencies]
linker = { path = "../linker" }
