[package]
name = "kernel-context"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
foreign = ["spin"]

[dependencies]
spin = { version = "0.9.4", optional = true }
