[package]
name = "kernel-vm"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
page-table = { git = "https://github.com/YdrMaster/page-table.git", rev = "2b3f5d4" }
