[package]
name = "sync"
version = "0.1.0"
edition = "2021"
authors = ["zflcs <zhaofangliang@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.9"
spin = "0.9.4"
rcore-task-manage = { path = "../task-manage", features = ["thread"] }
