[package]
name = "syscall"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
bitflags = "1.2.1"
signal-defs = { path = "../signal-defs" }

[features]
kernel = []
user = []
