[package]
name = "rcore-task-manage"
version = "0.0.0"
edition = "2021"
authors = ["zflcs <zhaofangliang@foxmail.com>"]
repository = "https://github.com/YdrMaster/rCore-Tutorial-in-single-workspace/task-manage"
license = "WTFPL"
readme = "README.md"
keywords = ["rcore", "task-manage"]
categories = ["no-std"]


[features]
proc = []
thread = []

