[package]
name = "rcore-task-manage"
description = "Manages tasks and maintain relationships between them"
version = "0.0.0"
edition = "2021"
authors = ["zflcs <zhaofangliang@foxmail.com>"]
repository = "https://github.com/YdrMaster/rCore-Tutorial-in-single-workspace/task-manage"
documentation = "https://docs.rs/rcore-task-manage"
license = "WTFPL"
readme = "README.md"
keywords = ["rcore", "task-manage"]
categories = ["no-std"]


[features]
proc = []
thread = []

