[package]
name = "xtask"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
command-ext = { git = "https://github.com/YdrMaster/command-ext.git", rev = "f25befb" }
once_cell = "1.14"

serde = "1.0"
serde_derive = "1.0"
toml = "0.5.9"
