[package]
name = "xtask"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
command-ext = { git = "https://github.com/YdrMaster/command-ext.git", rev = "a5e0e22" }
once_cell = "1.15"

serde = "1.0"
serde_derive = "1.0"
toml = "0.5.9"

easy-fs = { path = "../easy-fs" }
